kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: picalc
  annotations:
    argocd.argoproj.io/sync-wave: "-1" 
  labels:
    argocd.argoproj.io/managed-by: argocd
